--- a/work4_designcafe/css/reset.css
+++ b/work4_designcafe/css/reset.css
@@ -23,7 +23,7 @@ dl {
         "ＭＳ 明朝", serif;
     font-feature-settings: "palt";
     box-sizing: border-box;
-    background-color: #e8d9bf;
+    /* background-color: #e8d9bf; */
 }
 
 a {
